Try fix for hover on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 700px) {
+    .optest:hover {
+        opacity: 0;
+    }
+
+
 * {
     cursor: none;
 }
